<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Login"
            type="btcore.co.kr.d2band.view.login.LoginActivity"/>
    </data>

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="89dp"
        android:onClick="@{Login::onRegister}"
        android:text="@string/text_login_register"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_pwfind"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_pwfind"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="89dp"
        android:onClick="@{Login::onFindPw}"
        android:text="@string/text_login_find_pw"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_register"
        app:layout_constraintStart_toEndOf="@+id/text_idfind"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/text_idfind"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="89dp"
        android:onClick="@{Login::onFindId}"
        android:text="@string/text_login_find_id"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_pwfind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/btn_login"
        android:onClick="@{Login::onLogin}"
        android:text="로그인"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dailystep" />

    <TextView
        android:id="@+id/text_dailystep"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text="@string/text_autostate"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btn_autologin"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btn_autologin"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="13dp"
        android:onClick="@{Login::onAutoLogin}"
        android:background="@drawable/icon_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageView
        android:id="@+id/image_logo_register"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginEnd="132dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/box_login_pw"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo_register">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="210"
            android:background="@drawable/icon_id"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1040"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:hint="@string/edit_login_hint_id"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/box_login_pw"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="210"
            android:background="@drawable/icon_pw"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1040"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_pw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:hint="@string/edit_login_hint_pw"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>


</layout>
