<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Find"
            type="btcore.co.kr.d2band.view.find.FindIdActivity"/>
    </data>


<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:onClick="@{Find::onConfirm}"
        android:background="@drawable/btn_find_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_find" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_find"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_find" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_find"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel"
        app:tabIndicatorHeight="4dp"
        app:tabSelectedTextColor="@color/colorTabSelectTextColor">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_find_id" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_find_pw" />

    </android.support.design.widget.TabLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="28dp"
        android:layout_height="31dp"
        android:onClick="@{Find::onBack}"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_menu_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_find_logo"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/text_find_logo"
        android:textColor="@color/colorFindTextLogo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>



</layout>